devscripts (2.10.27) UNRELEASED; urgency=low

  * checkbashisms:
    + When rebuilding the list of bashisms to check, ensure it is based
      on whether the current file is a makefile, rather than whether the
      previous file was. Thanks to Raphael Geissert for the brown paper bag.
    + Match use of "SHELL=bash" as well as "SHELL=/bin/bash" in makefile mode
    + Improve heredoc detection to avoid triggering on "foo bar << x" whilst
      still matching 'cat <<"xyz"'
    + Add a variant on the "[ a == b ]" test
  * debchange:
    + Correctly handle the BTS returning no bugs for a package when --closes
      is used (either because the package doesn't exist in the archive
      or it has no open bugs) (Closes: #477398)
    + Add intrepid (ibex) to the list of Ubuntu distributions
  * debcheckout: Use the Vcs-* headers from the highest available version
    rather than the first returned by "apt-get source" (Closes: #477386)
  * debcommit: Ignore --confirm and --edit when combined with --diff
  * licensecheck: Correctly detect LGPLv3+ (Closes: #477742)
  * tagpending: Use option bundling (so that e.g. "tagpending -ni" works)
  * transition-check: New script to determine whether a set of source packages
    is involved in a transition for which uploads to unstable are currently
    blocked (Closes: #477922)
  * debian/control:
    + Add transition-check
    + Recommend libyaml-syck-perl (for transition-check)
  * README: Add transition-check

 -- Adam D. Barratt <adam@adam-barratt.org.uk>  Mon, 21 Apr 2008 20:06:13 +0100

devscripts (2.10.26) unstable; urgency=low

  [ Adam D. Barratt ]
  * bts: Update documentation for "forwarded" to indicate that it may also
    be used with a URL (for instance, for an upstream bug tracker)
    (Closes: #475896)
  * checkbashisms:
    + Add experimental makefile support (only enabled if -f is used)
    + Modify the "2>&foo" check to allow a valid file descriptor followed
      by a backslash (for line continuations)